hphp/hack/test/typecheck/type_structure/type_structure8.php.exp
File "type_structure8.php", line 8, characters 18-20:
Was expecting a class, but got a string (Typing[4026])
